--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,14 @@
 db.driver=com.mysql.jdbc.Driver
-db.url=jdbc:mysql://172.17.0.3:3306/guns?allowPublicKeyRetrieval=true&useSSL=FALSE
-db.username=root
-db.password=password
+db.url=jdbc:mysql://guns.database.windows.net:3306/guns?allowPublicKeyRetrieval=true&useSSL=FALSE
+db.username=adminguns
+db.password=Srinivasbv22!
+
 
 # Hibernate properties
 hibernate.show_sql=true
 hibernate.hbm2ddl.auto=update
 hibernate.dialect=org.hibernate.dialect.MySQLDialect
 hibernate.format_sql=false
+
+
+
